Fix spacing on nav bar

--- a/app/assets/stylesheets/restaurant_view.scss
+++ b/app/assets/stylesheets/restaurant_view.scss
@@ -6,7 +6,7 @@
     "nav_left  nav_content   nav_right";
   background-color: $my-red;
   grid-template-columns: 1fr 960px 1fr;
-  height: 64px;
+  grid-template-rows: 68px;
 
 }
 .restaurant_view .header .nav_left {
